# dram-agent

./: .gitignore  DEMO_SCRIPT.md  KAGGLE_SUBMISSION.md  README.md  main.py  pyproject.toml  run_demo.py
agents/: allocation_agent.py  assessor_agent.py  intake_agent.py
db/: allocations_log.json  dharavi_inventory.json  telemetry.json
mcp_server/: dram_server.py
skills/: reputation_calc.py
tests/: test_mesh.py
tools/: dram_toolset.py
