[project]
name = "dram-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
    "google-agents-cli>=1.0.0",
    "google-genai>=2.10.0",
    "mcp[cli]>=1.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]

